--- a/src/app/theme/components/baContentTop/baContentTop.html
+++ b/src/app/theme/components/baContentTop/baContentTop.html
@@ -1,4 +1,5 @@
 <div class="content-top clearfix">
+  <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"></a>
   <h1 class="al-title">{{ activePageTitle }}</h1>
 
   <!--<ul class="breadcrumb al-breadcrumb">
