--- a/src/app/theme/components/baSidebar/baSidebar.scss
+++ b/src/app/theme/components/baSidebar/baSidebar.scss
@@ -194,7 +194,7 @@ a.al-sidebar-list-link {
       opacity: 0;
     }
 
-    .al-sidebar-sublist {
+    .al-sidebar-sublist, .sidebar-buttons {
       position: absolute;
       top: -1px;
       left: 52px;
