--- a/src/app/theme/components/baMenu/baMenu.scss
+++ b/src/app/theme/components/baMenu/baMenu.scss
@@ -1,1 +1,12 @@
 @import '../../sass/conf/conf';
+
+.sidebar-buttons {
+  padding-left: 18px;
+  text-shadow: none;
+  font-size: 16px;
+  text-decoration: none;
+  color: $sidebar-text;
+  white-space: nowrap;
+  overflow: hidden;
+  cursor: pointer;
+}
