--- a/src/app/theme/components/baContentTop/baContentTop.scss
+++ b/src/app/theme/components/baContentTop/baContentTop.scss
@@ -8,7 +8,7 @@
 h1.al-title {
   font-weight: $font-bold;
   color: $default-text;
-  float: center;
+  text-align: center;
   width: auto;
   margin: 0;
   padding: 0;
