--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,2 +1,24 @@
-<div class="auth-main" id="auth-main">
+<div class="auth-main">
+  <div class="auth-block">
+    <h1>(logo CE Wavestone)</h1>
+    <a routerLink="/register" class="auth-link">Par ici pour créer ton compte !</a>
+
+    <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" class="form-horizontal">
+      <div class="form-group row" [ngClass]="{'has-error': (!email.valid && email.touched), 'has-success': (email.valid && email.touched)}">
+        <div class="col-sm-12">
+          <input [formControl]="email" type="email" class="form-control" id="inputEmail3" placeholder="Email Wavestone">
+        </div>
+      </div>
+      <div class="form-group row" [ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">
+        <div class="col-sm-12">
+          <input [formControl]="password" type="password" class="form-control" id="inputPassword3" placeholder="Mot de passe">
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="offset-sm-3 col-sm-6">
+          <button [disabled]="!form.valid" type="submit" class="btn btn-default btn-block btn-auth" routerLink="/pages/dashboard">Login</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
