--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -5,29 +5,23 @@
 
     <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" class="form-horizontal">
       <div class="form-group row" [ngClass]="{'has-error': (!email.valid && email.touched), 'has-success': (email.valid && email.touched)}">
-        <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
-
-        <div class="col-sm-9">
+        <div class="col-sm-12">
           <input [formControl]="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
         </div>
       </div>
       <div class="form-group row" [ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">
-        <label for="inputPassword3" class="col-sm-3 control-label">Mot de passe</label>
-
-        <div class="col-sm-9">
+        <div class="col-sm-12">
           <input [formControl]="password" type="password" class="form-control" id="inputPassword3" placeholder="Mot de passe">
         </div>
       </div>
       <div class="form-group row" [ngClass]="{'has-error': (!repeatPassword.valid && repeatPassword.touched), 'has-success': (repeatPassword.valid && repeatPassword.touched)}">
-        <label for="inputPassword4" class="col-sm-3 control-label">Mot de passe</label>
-
-        <div class="col-sm-9">
-          <input [formControl]="repeatPassword" type="password" class="form-control" id="inputPassword4" placeholder="Repète de mot de passe">
-          <span *ngIf="!passwords.valid && (password.touched || repeatPassword.touched)" class="help-block sub-little-text">Les mots de passe ne correspondent pas.</span>
+        <div class="col-sm-12">
+          <input [formControl]="repeatPassword" type="password" class="form-control" id="inputPassword4" placeholder="Encore le mot de passe">
+          <span *ngIf="!passwords.valid && (password.touched || repeatPassword.touched)" class="help-block sub-little-text">Les mots de passe ne correspondent pas :(</span>
         </div>
       </div>
       <div class="form-group row">
-        <div class="offset-sm-3 col-sm-9">
+        <div class="offset-sm-4 col-sm-6">
           <button [disabled]="!form.valid" type="submit" class="btn btn-default btn-auth" routerLink="/login">Créer un compte</button>
         </div>
       </div>
