about page changes

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,39 +1,43 @@
 
 <div class="row">
-    <div class="col-md-8" align="center">
+    <div class=".col-xs-10" align="center">
    		<h1>Le CE Wavestone</h1>
    		<img src="http://bookboon.com/blog/wp-content/uploads/sites/5/2013/01/shutterstock_609654-450x300.jpg" />
     </div>       
 </div>
 <br />
 <div class="row">
-	<div class="col-md-4">
-	    <ba-card title="Description et rôle du CE" baCardClass="large-card with-scroll feed-panel">
-	    </ba-card>
-	</div>
-	<div class="col-md-4">
-	    <ba-card title="L'Equipe du CE" baCardClass="large-card with-scroll feed-panel">
+	<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	    <ba-card title="L'Equipe du CE" baCardClass="medium-card with-scroll">
 	      <feed></feed>
 	    </ba-card>
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-4">
-		<h1>Contacter le CE </h1>
-		<form>
-				  <div class="form-group">
-				    <label for="input01">Objet du message</label>
-				    <input type="text" class="form-control" id="input01" placeholder="Text">
-				  </div>
+	<div class=".col-xs-6">
+	    <ba-card title="Description et rôle du CE" baCardClass="medium-card">
+	    Description etc...
+	    </ba-card>
+	</div>
 
-				  <div class="form-group">
-				    <label for="textarea01">Message</label>
-				    <textarea placeholder="Default Input" class="form-control" id="textarea01"></textarea>
-				  </div>
-				  <div class="button-wrapper">
-					  <button type="submit button" class="btn btn-default">Envoyer message</button>
-				  </div>
-		</form>
+	<div class=".col-xs-6">
+		<div>
+			<h1>Contacter le CE </h1>
+			<form>
+					  <div class="form-group">
+					    <label for="input01">Objet du message</label>
+					    <input type="text" class="form-control" id="input01" placeholder="Text">
+					  </div>
+
+					  <div class="form-group">
+					    <label for="textarea01">Message</label>
+					    <textarea placeholder="Default Input" class="form-control" id="textarea01"></textarea>
+					  </div>
+					  <div class="button-wrapper">
+						  <button type="submit button" class="btn btn-default">Envoyer message</button>
+					  </div>
+			</form>
+		</div>
 
 	</div>
 </div>
