--- a/src/app/pages/about/feed/feed.scss
+++ b/src/app/pages/about/feed/feed.scss
@@ -12,10 +12,10 @@
   padding: 10px 0 ;
   border-bottom: 1px solid rgba(0,0,0,0.12);
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.12);
-  &:first-child {
-    padding-top: 0;
-  }
-
+  float:left;
+  max-width:25%;
+  huight:25px;
+ 
   .hidden {
     display: none!important;
   }
