--- a/src/app/pages/events/event-detail.html
+++ b/src/app/pages/events/event-detail.html
@@ -1,54 +1,64 @@
-<div *ngIf="event" class="row">
-	<div class="col-md-1"></div>
-	<div class="col-md-10" style="border-style: solid;">
-		<br>
-		<div class="row">
-			<div class="col-md-8">
-	      	<h3>{{event.title}}</h3>
-	    </div>
-	    <div class="col-md-2">
-	      	<b>Lieu :</b> {{event.place}}
-	    </div>
-	    <div class="col-md-2">
-	      	<b>Date :</b> {{event.date}}
-	    </div>
-	  </div>
-	  <br><br>
-	  <div class="row">
-			<div class="col-md-6">
-	    	<img [src]="event.imgUrl" class="img-fluid" style="max-height:05%; max-width:90%; margin-left:auto; margin-right:auto">
-	    </div>
-	    <div class="col-md-6">
-	  		<div class="row"><!--COULEUR SPONSOR COUT-->
-	  			<div class="col-md-6">
-						<div *ngIf="event.eligibility.includes('b')">
-		      		<button class="btn btn-lg disabled" style="background: #2B90F5" aria-disabled="true">CE  Bleu</button>
-		      	</div>
-						<div *ngIf="event.eligibility.includes('o')">
-							<button class="btn btn-lg disabled" style="background: #E28356" aria-disabled="true">CE Orange</button>
-		      	</div>
-	      	</div>
-	      	<div class="col-md-6 justify-content-center">
-	      		<div class="row">
-	      			<b>Partenaire :</b> {{event.sponsor}}
-	  				</div>
-	  				<div class="row">
-	      			<b>Coût :</b> {{event.cost}} euros de participation !
-	    			</div>
-	      	</div>
-				</div>
-				<br><br>
-				<div class="row"><!--DESCRIPTION-->
-					<div innerHtml={{event.description}}></div>
-				</div>
-				<br><br>
-				<div class="row"><!--LIENS-->
-					<button class="btn" style="align:left;"><a href="#{{event.eventUrl}}">Page de l'évènement</a></button>
-					<button class="btn" style="align:left;"><a href="#{{event.contactUrl}}">Contact</a></button>
-				</div>
-	  	</div>
-  	</div>
-  	<br>
+<div *ngIf="event">
+	<div class="row">
+		<div class="col-md-1"></div>
+		<div class="col-md-10">
+			<ba-card>
+				<br>
+				<div class="row">
+					<div class="col-md-8">
+			      	<h3>{{event.title}}</h3>
+			    </div>
+			    <div class="col-md-2">
+			      	<b>Lieu :</b> {{event.place}}
+			    </div>
+			    <div class="col-md-2">
+			      	<b>Date :</b> {{event.date}}
+			    </div>
+			  </div>
+			  <br><br>
+			  <div class="row">
+					<div class="col-md-6">
+			    	<img [src]="event.imgUrl" class="img-fluid" style="max-height:05%; max-width:90%; margin-left:auto; margin-right:auto">
+			    </div>
+			    <div class="col-md-6">
+			  		<div class="row"><!--COULEUR SPONSOR COUT-->
+			  			<div class="col-md-6">
+			  				<div [ngSwitch]="event.eligibility">
+			  					<div *ngSwitchCase="'b'">
+			  						<button class="btn btn-lg disabled" style="background: #2B90F5" aria-disabled="true">CE  Bleu</button>
+			  					</div>
+			  					<div *ngSwitchCase="'o'">
+			  						<button class="btn btn-lg disabled" style="background: #E28356" aria-disabled="true">CE Orange</button>
+			  					</div>
+			  					<div *ngSwitchCase="'bo'">
+										<button class="btn btn-lg disabled" style="background: #2B90F5" aria-disabled="true">CE  Bleu</button>
+			  						<button class="btn btn-lg disabled" style="background: #E28356" aria-disabled="true">CE Orange</button>
+			  					</div>
+		  					</div>
+			      	</div>
+			      	<div class="col-md-6">
+			      		<div class="row">
+			      			<b>Partenaire : </b> {{event.sponsor}}
+			  				</div>
+			  				<div class="row">
+			      			<b>Coût : </b> {{event.cost}} euros de participation !
+			    			</div>
+			      	</div>
+						</div>
+						<br><br>
+						<div class="row"><!--DESCRIPTION-->
+							<div innerHtml={{event.description}}></div>
+						</div>
+						<br><br>
+						<div class="row"><!--LIENS-->
+							<button class="btn" style="align:left;"><a href="#{{event.eventUrl}}">Page de l'évènement</a></button>
+							<button class="btn" style="align:left;"><a href="#{{event.contactUrl}}">Contact</a></button>
+						</div>
+			  	</div>
+		  	</div>
+		  	<br>
+	  	</ba-card>
+		</div>
+		<div class="col-md-1"></div>
 	</div>
-	<div class="col-md-1"></div>
 </div>
