--- a/src/app/pages/events/events.html
+++ b/src/app/pages/events/events.html
@@ -16,8 +16,8 @@
       	<div class="row"><!--BARRE DE RECHERCHE-->
       		<div class="col-md-12" style="display:flex; justify-content:center;">
 	      		<form class="navbar-form navbar-right inline-form">
-	            <div class="form-group">
-	          		<input type="search" class="input-sm form-control" placeholder="Recherche">
+	            <div class="form-group" style="display:flex; justify-content:center;">
+	          		<input type="search" class="input-sm form-control" placeholder="Recherche">&nbsp;&nbsp;
 	         			<button type="submit" class="btn btn-primary btn-sm">Chercher</button>
 	            </div>
 	          </form>
