--- a/src/app/pages/events/event-detail.html
+++ b/src/app/pages/events/event-detail.html
@@ -3,6 +3,19 @@
 		<div class="col-md-1"></div>
 		<div class="col-md-10">
 			<div class="event-card">
+				<div class="row"><!--ELIGIBILITE -->
+					<div [ngSwitch]="event.eligibility">
+						<div *ngSwitchCase="'b'">
+							<div class="event-eligibility" style="background: #2B90F5">CE Bleu</div>
+						</div>
+						<div *ngSwitchCase="'o'">
+							<div class="event-eligibility" style="background: #E28356">CE Orange</div>
+						</div>
+						<div *ngSwitchCase="'bo'">
+							<div class="event-eligibility" style="background: #503078">Tous CE</div>
+						</div>
+					</div>
+				</div>
 				<br>
 				<div class="row">
 					<div class="col-md-8">
@@ -22,43 +35,28 @@
 			    </div>
 			    <div class="col-md-6">
 			    	<div class="event-description">
-				  		<div class="row"><!--COULEUR SPONSOR COUT-->
-				  			<div class="col-md-7">
-				  				<div [ngSwitch]="event.eligibility">
-				  					<div *ngSwitchCase="'b'">
-				  						<button class="btn btn-lg disabled" style="background: #2B90F5" aria-disabled="true">CE  Bleu</button>
-				  					</div>
-				  					<div *ngSwitchCase="'o'">
-				  						<button class="btn btn-lg disabled" style="background: #E28356" aria-disabled="true">CE Orange</button>
-				  					</div>
-				  					<div *ngSwitchCase="'bo'">
-											<button class="btn btn-lg disabled" style="background: #2B90F5" aria-disabled="true">CE  Bleu</button>
-				  						<button class="btn btn-lg disabled" style="background: #E28356" aria-disabled="true">CE Orange</button>
-				  					</div>
-			  					</div>
-				      	</div>
-				      	<div class="col-md-5">
-				      		<div class="row">
-				      			<div class="event-sponsor-or-cost"><b>Sponsored by : </b><br> {{event.sponsor}}</div>
-				  				</div>
-				  				<div *ngIf="event.cost>0">
-					  				<div class="row">
-					      			<div class="event-sponsor-or-cost"><b>Coût : </b><br> {{event.cost}} € de participation.</div>
-					    			</div>
-				    			</div>
-				      	</div>
-							</div>
+			      	<div class="row"><!--SPONSOR-->
+		      			<div class="event-sponsor-or-cost"><b>Sponsored by : </b> {{event.sponsor}}</div>
+		  				</div>
+		  				<br><br>
+		  				<div class="row"><!--COUT-->
+		  					<div class="event-sponsor-or-cost">
+		  						<div *ngIf="event.cost>0">
+			      				<b>Coût : </b> {{event.cost}} € de participation.
+			      			</div>
+			    			</div>
+		    			</div>
 							<br><br>
 							<div class="row"><!--DESCRIPTION-->
-								<div innerHtml={{event.description}}></div>
+								<div innerHtml={{event.description}} style="text-align: justify;"></div>
 							</div>
 							<br><br>
 							<div class="row"><!--LIENS-->
 								<div class="col-md-2">
 								</div>
 								<div class="col-md-8">
-									<button class="btn" style="align:left;"><a href="#{{event.eventUrl}}">Page de l'évènement</a></button>
-									<button class="btn" style="align:left;"><a href="#{{event.contactUrl}}">Contact</a></button>
+									<button class="btn"><a href="#{{event.eventUrl}}">Page de l'évènement</a></button>
+									<button class="btn"><a href="#{{event.contactUrl}}">Contact</a></button>
 								</div>
 								<div class="col-md-2">
 								</div>
