--- a/src/app/pages/events/event-detail.html
+++ b/src/app/pages/events/event-detail.html
@@ -54,8 +54,8 @@
 							<div class="row"><!--LIENS-->
 								<div class="col-md-2">
 								</div>
-								<div class="col-md-8">
-									<button class="btn"><a href="#{{event.eventUrl}}">Page de l'évènement</a></button>
+								<div class="col-md-8"  style="display:flex; justify-content:center;">
+									<button class="btn"><a href="#{{event.eventUrl}}">Page de l'évènement</a></button>&nbsp;&nbsp;
 									<button class="btn"><a href="#{{event.contactUrl}}">Contact</a></button>
 								</div>
 								<div class="col-md-2">
