--- a/src/app/pages/clubs/club-detail.html
+++ b/src/app/pages/clubs/club-detail.html
@@ -1,33 +1,61 @@
 <div *ngIf="club">
 	<div id="{{club.id}}">
-		<div class="row">
-			<h3>{{club.title}}</h3>
-	  </div>
-	  <div class="row">
-			<div class="col-md-3">
-	      <ba-card title="Couleur">  
+		<div class="club-card">
+			<div class="row"><!--IMAGE DE BANNER-->
+				<img [src]="club.imgUrl" class="club-img">
+			</div>
+			<div class="separator"></div>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="club-title">{{club.title}}</div>
+				</div>
+		  </div>
+		  <div class="separator"></div>
+		  <div class="row">
+		  	<div class="col-md-12">
+		  		<div innerHtml={{club.description}} style="text-align: justify;"></div>
+	  		</div>
+		  </div>
+		  <div class="separator"></div>
+		  <div class="row">
+				<div class="col-md-6"> <!--ELIGIBILITE-->
+		      <div class="club-subtitle">Bénéficiaires</div>
+		      <div class="separator"></div>
 	        <div *ngIf="club.eligibility.includes('b')">
 	      		<button class="btn btn-lg disabled" style="background: #2B90F5" aria-disabled="true">CE  Bleu</button>
 	      	</div>
 					<div *ngIf="club.eligibility.includes('o')">
 						<button class="btn btn-lg disabled" style="background: #E28356" aria-disabled="true">CE Orange</button>
 	      	</div>
-	      </ba-card>
-	    </div>
-	    <div class="col-md-6">
-	      <ba-card title="Description">  
-	        {{club.description}}
-	      </ba-card>
-	    </div>
-	    <div class="col-md-3">
-	      <ba-card title="Tarif adhésion">  
-	        {{club.cost}}
-	      </ba-card>
-	    </div>
-		</div>
-		<div class="row">
-			<div class="col-md-4">
-				<ba-card title="Contacter le club">
+		    </div>
+		    <div class="col-md-6">
+		    	<div class="club-subtitle">Tarifs d'adhésion</div>
+		    	<div class="separator"></div>
+	        {{club.cost}} € d'adhésion.
+		    </div>
+			</div>
+			<div class="separator"></div>
+			<div class="row">
+				<div class="col-md-6"><!--PAIEMENT-->
+					<div class="club-subtitle">Modalités de paiement</div>
+					<div class="separator"></div>
+					bbbbb
+				</div>
+				<div class="col-md-6"><!--INSCRIPTION-->
+					<div class="club-subtitle">Inscription</div>
+					<div class="separator"></div>
+					bbbbb
+				</div>
+			</div>
+			<div class="separator"></div>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="club-subtitle">Contacter le {{club.title}}</div>
+				</div>
+			</div>
+			<br><br>
+			<div class="row">
+				<div class="col-md-12">
 					<form>
 					  <div class="form-group">
 					    <label for="input01">Objet du message</label>
@@ -41,12 +69,9 @@
 						  <button type="submit button" class="btn btn-default">Envoyer message</button>
 					  </div>
 					</form>
-				</ba-card>
+				</div>
 			</div>
-			<div class="col-md-8">
-				<img [src]="club.imgUrl" class="img-fluid" style="max-height:6%; max-width:40%; margin-left:auto; margin-right:auto">
-			</div>
+			<br><br>
 		</div>
-		
 	</div>
 </div>
