--- a/src/app/pages/clubs/clubs.html
+++ b/src/app/pages/clubs/clubs.html
@@ -2,9 +2,10 @@
 	<h2>Catégorie 1 - Sport</h2>
 </div>
 <div class="row">
-	<div *ngFor="let club of clubs">
-		<div *ngIf="club.category.includes('Sport')">
-			<div class="col-md-2">
+	<div class="col-md-12">
+		<div *ngFor="let club of clubs">
+			<div *ngIf="club.category.includes('Sport')">
+				<div class="col-md-1">
 				<div class="banner" [class.selected]="club === selectedClub" (click)="onSelect(club)">
 					<div class="large-banner-wrapper">
 						<img [src]="club.imgUrl" style="width:auto; max-height:20%;">
@@ -15,6 +16,7 @@
 						</div>
 					</div>
 				</div>
+			</div>
 			</div>
 		</div>
 	</div>
@@ -25,7 +27,7 @@
 <div class="row">
 	<div *ngFor="let club of clubs">
 		<div *ngIf="club.category.includes('Culture')">
-			<div class="col-md-2">
+			<div class="col-md-1">
 				<div class="banner" [class.selected]="club === selectedClub" (click)="onSelect(club)">
 					<div class="large-banner-wrapper">
 						<img [src]="club.imgUrl" style="width:auto; max-height:20%;">
@@ -40,4 +42,5 @@
 		</div>
 	</div>
 </div>
+
 <my-club-detail [club]="selectedClub"></my-club-detail>
