--- a/src/app/pages/events/events.scss
+++ b/src/app/pages/events/events.scss
@@ -52,16 +52,13 @@ button.btn.btn-tag{
 }
 
 .event-eligibility{
-	color: transparent;
-	font-size: 20px;
-	text-align: center;
-  -ms-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  -ms-transform: translate(-20%,0%) rotate(-45deg);
+  -webkit-transform: translate(-20%,0%) rotate(-45deg);
+  transform: translate(-20%,0%) rotate(-45deg);
   z-index: 1;
-  width: auto;
-  height: 10%;
-  margin-top: 15%;
+  height: 30px;
+  width: 100px;
+  position: absolute;
 }
 
 .event-card {
@@ -70,6 +67,7 @@ button.btn.btn-tag{
   border-style: solid;
   margin-right: 10%;
   margin-left: 10%;
+  margin-bottom: 30px;
   z-index:0;
 }
 
