Tuiles de clubs et components séparés mais le routing ça marche pas

--- a/src/app/pages/clubs/clubs.html
+++ b/src/app/pages/clubs/clubs.html
@@ -1,46 +1,1 @@
-<div class="row">
-	<h2>Catégorie 1 - Sport</h2>
-</div>
-<div class="row">
-	<div class="col-md-12">
-		<div *ngFor="let club of clubs">
-			<div *ngIf="club.category.includes('Sport')">
-				<div class="col-md-1">
-				<div class="banner" [class.selected]="club === selectedClub" (click)="onSelect(club)">
-					<div class="large-banner-wrapper">
-						<img [src]="club.imgUrl" style="width:auto; max-height:20%;">
-					</div>
-					<div class="banner-text-wrapper">
-						<div class="banner-text">
-							<h3>{{club.title}}</h3>
-						</div>
-					</div>
-				</div>
-			</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<h2>Catégorie 2 - Culture</h2>
-</div>
-<div class="row">
-	<div *ngFor="let club of clubs">
-		<div *ngIf="club.category.includes('Culture')">
-			<div class="col-md-1">
-				<div class="banner" [class.selected]="club === selectedClub" (click)="onSelect(club)">
-					<div class="large-banner-wrapper">
-						<img [src]="club.imgUrl" style="width:auto; max-height:20%;">
-					</div>
-					<div class="banner-text-wrapper">
-						<div class="banner-text">
-							<h3>{{club.title}}</h3>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<my-club-detail [club]="selectedClub"></my-club-detail>
+<router-outlet></router-outlet>
