--- a/src/app/pages/login/login.scss
+++ b/src/app/pages/login/login.scss
@@ -1,1 +1,300 @@
 @import '../../theme/sass/auth';
+
+/*main {
+    background-color: $wavestone-purple;
+}*/
+
+.container {
+  max-width: 900px;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+}
+
+input {
+  outline: none !important;
+}
+
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+  font-weight: 700;
+}
+
+section#formHolder {
+  padding: 50px 0;
+}
+
+.brand {
+  padding: 20px;
+  background-size: cover;
+  background-position: center center;
+  color: #fff;
+  min-height: 540px;
+  position: relative;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.6s cubic-bezier(1, -0.375, 0.285, 0.995);
+  z-index: 9999;
+}
+.brand.active {
+  width: 100%;
+}
+.brand::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(244,243,240, 1.0);
+  z-index: -1;
+}
+
+.brand .heading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  transition: all 0.6s;
+
+  & .ce-logo {
+      width: 100%;
+      height: auto;
+  }
+}
+
+.brand .heading.active {
+  top: 100px;
+  left: 100px;
+  transform: translate(0);
+}
+
+.form {
+  position: relative;
+}
+.form .form-piece {
+  background: #fff;
+  min-height: 480px;
+  margin-top: 30px;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  color: #bbbbbb;
+  padding: 30px 0 60px;
+  transition: all 0.9s cubic-bezier(1, -0.375, 0.285, 0.995);
+  position: absolute;
+  top: 0;
+  left: -30%;
+  width: 130%;
+  overflow: hidden;
+}
+.form .form-piece.switched {
+  transform: translateX(-100%);
+  width: 100%;
+  left: 0;
+}
+.form form {
+  padding: 0 40px;
+  margin: 0;
+  width: 70%;
+  position: absolute;
+  top: 50%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+}
+.form form .form-group {
+  margin-bottom: 5px;
+  position: relative;
+
+}
+
+.form form .form-group.select {
+  margin-top: 35px;
+}
+
+.form form .form-group.hasError input {
+  border-color: $danger !important;
+}
+.form form .form-group.hasError label {
+  color: $danger !important;
+}
+.form form label {
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-family: "Tahoma", sans-serif;
+  transform: translateY(40px);
+  transition: all 0.4s;
+  cursor: text;
+  z-index: -1;
+}
+.form form label.active {
+  transform: translateY(10px);
+  font-size: 10px;
+}
+.form form label.fontSwitch {
+  font-family: "Raleway", sans-serif !important;
+  font-weight: 600;
+}
+.form form input:not([type=submit]) {
+  background: none;
+  outline: none;
+  border: none;
+  display: block;
+  padding: 10px 0;
+  width: 100%;
+  border-bottom: 1px solid #eee;
+  color: #444;
+  font-size: 15px;
+  font-family: "Tahoma", sans-serif;
+  z-index: 1;
+}
+.form form input:not([type=submit]).hasError {
+  border-color: $danger;
+}
+.form form span.error {
+  color: $danger;
+  font-family: "Tahoma", sans-serif;
+  font-size: 12px;
+  position: absolute;
+  bottom: -20px;
+  right: 0;
+  display: none;
+}
+.form form input[type=password] {
+  color: $info;
+}
+.form form .CTA {
+  margin-top: 30px;
+}
+.form form .CTA input {
+  font-size: 12px;
+  text-transform: uppercase;
+  padding: 5px 30px;
+  background: $info;
+  color: #fff;
+  border-radius: 30px;
+  margin-right: 20px;
+  border: none;
+  font-family: "Tahoma", sans-serif;
+}
+.form form .CTA a.switch {
+  font-size: 13px;
+  font-weight: 400;
+  font-family: "Tahoma", sans-serif;
+  color: #bbbbbb;
+  text-decoration: underline;
+  transition: all 0.3s;
+}
+.form form .CTA a.switch:hover {
+  color: $info;
+}
+
+footer {
+  text-align: center;
+}
+footer p {
+  color: #777;
+}
+footer p a, footer p a:focus {
+  color: #b8b09f;
+  transition: all 0.3s;
+  text-decoration: none !important;
+}
+footer p a:hover, footer p a:focus:hover {
+  color: #f95959;
+}
+
+@media (max-width: 768px) {
+
+    .brand .heading {
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        text-align: center;
+        transform: translate(0%, 0%);                
+        transition: all 0.6s;
+
+        & .ce-logo {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+  .container {
+    overflow: hidden;
+  }
+
+  section#formHolder {
+    padding: 0;
+  }
+  section#formHolder div.brand {
+    min-height: 200px !important;
+  }
+  section#formHolder div.brand.active {
+    min-height: 100vh !important;
+  }
+  section#formHolder div.brand .heading.active {
+    top: 200px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  section#formHolder div.brand .success-msg p {
+    font-size: 16px;
+  }
+  section#formHolder div.brand .success-msg a {
+    padding: 5px 30px;
+    font-size: 10px;
+  }
+  section#formHolder .form {
+    width: 80vw;
+    min-height: 500px;
+    margin-left: 10vw;
+  }
+  section#formHolder .form .form-piece {
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    transition: all 0.5s ease-in-out;
+  }
+  section#formHolder .form .form-piece.switched {
+    transform: translateY(-100%);
+    width: 100%;
+    left: 0;
+  }
+  section#formHolder .form .form-piece > form {
+    width: 100% !important;
+    padding: 60px;
+    left: 50%;
+  }
+}
+@media (max-width: 480px) {
+
+    .brand .heading {
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        text-align: center;
+        transform: translate(0%, 0%);        
+        transition: all 0.6s;
+        margin-top: 20px;
+
+        & .ce-logo {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+  section#formHolder .form {
+    width: 100vw;
+    margin-left: 0;
+  }
+
+  h2 {
+    font-size: 50px !important;
+  }
+}
