--- a/src/app/theme/sass/conf/colorSchemes/_ce.scss
+++ b/src/app/theme/sass/conf/colorSchemes/_ce.scss
@@ -31,9 +31,9 @@ $bootstrap-panel-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.25);
 
 $primary: rgb(80,48,120) !default;
 $info: rgb(4,139,154) !default;
-$success: #90b900 !default;
-$warning: #dfb81c !default;
-$danger: #e85656 !default;
+$success: rgb(114,200,129) !default;
+$warning: rgb(214,156,0) !default;
+$danger: rgb(242,110,103) !default;
 $wavestone-purple: rgb(80,48,120) !default;
 $wavestone-silver: rgb(244,243,240) !default;
 
