--- a/src/app/pages/login/login.scss
+++ b/src/app/pages/login/login.scss
@@ -1,8 +1,9 @@
-@import '../../theme/sass/auth';
+@import '../../theme/sass/conf/conf';
 
-/*main {
-    background-color: $wavestone-purple;
-}*/
+.login-page {
+  height: 100vh;
+  background: $wavestone-purple;
+}
 
 .container {
   max-width: 900px;
@@ -232,7 +233,7 @@ footer p a:hover, footer p a:focus:hover {
     padding: 0;
   }
   section#formHolder div.brand {
-    min-height: 200px !important;
+    min-height: 180px !important;
   }
   section#formHolder div.brand.active {
     min-height: 100vh !important;
@@ -281,7 +282,7 @@ footer p a:hover, footer p a:focus:hover {
         text-align: center;
         transform: translate(0%, 0%);        
         transition: all 0.6s;
-        margin-top: 20px;
+        margin-top: 10px;
 
         & .ce-logo {
             width: 100%;
