--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -35,7 +35,7 @@
                     </div>
 
                     <div class="CTA">
-                      <input type="submit" value="Login">
+                      <button type="submit" class="btn btn-info btn-with-icon" value="Login"><i class="ion-android-checkmark-circle"></i>Login</button>
                       <a href="#" class="switch">Je suis nouveau</a>
                     </div>
                 </form>
@@ -84,7 +84,7 @@
                     </div>
 
                     <div class="CTA">
-                      <input type="submit" value="Créer mon compte" id="submit">
+                      <button type="submit" class="btn btn-info btn-with-icon" id="submit"><i class="ion-android-checkmark-circle"></i>Créer mon compte</button>
                       <a href="#" class="switch">J'ai déjà un compte</a>
                     </div>
                 </form>
