--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,29 +1,30 @@
-
 <div class="row">
-    <div class=".col-xs-10" align="center">
-   		<h1>Le CE Wavestone</h1>
-   		<img src="http://bookboon.com/blog/wp-content/uploads/sites/5/2013/01/shutterstock_609654-450x300.jpg" />
-    </div>       
+  <div class="col-md-12">
+    <ba-card baCardClass="banner-column-panel">
+      <div class="banner">
+        <div class="large-banner-wrapper">
+          <img src="https://i2.wp.com/www.bimtech-eng.com/wp-content/uploads/2016/10/Team-Avatar1.png" alt=""/>
+        </div>
+        <div class="banner-text-wrapper">
+          <div class="banner-text">
+            <h1>Le CE Wavestone</h1>
+          </div>
+        </div>
+      </div>
+  	</ba-card>
+  </div>
 </div>
-<br />
 <div class="row">
-	<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-	    <ba-card title="L'Equipe du CE" baCardClass="medium-card with-scroll">
-	      <feed></feed>
-	    </ba-card>
-	</div>
-</div>
-<div class="row">
-	<div class=".col-xs-6">
+	<div class="col-xs-6">
 	    <ba-card title="Description et rôle du CE" baCardClass="medium-card">
-	    Description etc...
+	    Description
 	    </ba-card>
 	</div>
 
-	<div class=".col-xs-6">
+	<div class="col-xs-6">
 		<div>
 			<h1>Contacter le CE </h1>
-			<form>
+			<form style="background:white;">
 					  <div class="form-group">
 					    <label for="input01">Objet du message</label>
 					    <input type="text" class="form-control" id="input01" placeholder="Text">
@@ -41,4 +42,12 @@
 
 	</div>
 </div>
+<div class="row">
+	<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	    <ba-card title="L'Equipe du CE" baCardClass="medium-card with-scroll">
+	      <feed></feed>
+	    </ba-card>
+	</div>
+</div>
+
 
