--- a/src/app/pages/about/feed/feed.scss
+++ b/src/app/pages/about/feed/feed.scss
@@ -13,9 +13,9 @@
   border-bottom: 1px solid rgba(0,0,0,0.12);
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.12);
   float:left;
-  max-width:25%;
-  huight:25px;
- 
+  width:25%;
+  height:100px;
+   
   .hidden {
     display: none!important;
   }
