--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -24,6 +24,7 @@
               <!-- Login Form -->
               <div class="login form-piece">
                 <form class="login-form" (ngSubmit)="loginSubmit()" #loginForm="ngForm">
+                    <p class="form-title">Accès au site</p>
                     <div class="form-group">
                       <label for="loginemail">Adresse mail</label>
                       <input type="email" name="loginemail" id="loginemail" required [(ngModel)]="loginUser.email">
@@ -45,7 +46,7 @@
               <!-- Signup Form -->
               <div class="signup form-piece switched">
                 <form class="signup-form" (ngSubmit)="registerSubmit()" #registerForm="ngForm">
-
+                    <p class="form-title">Création de compte</p>
                     <div class="form-group">
                       <label for="name">Prénom</label>
                       <input type="text" name="username" id="name" class="name" [(ngModel)]="registerUser.name">
@@ -77,14 +78,8 @@
                       <span class="error"></span>
                     </div>
 
-                    <div class="form-group">
-                      <label for="passwordCon">Confirmer le mot de passe</label>
-                      <input type="password" name="passwordCon" id="passwordCon" class="passConfirm">
-                      <span class="error"></span>
-                    </div>
-
                     <div class="CTA">
-                      <button type="submit" class="btn btn-info btn-with-icon" id="submit"><i class="ion-android-checkmark-circle"></i>Créer mon compte</button>
+                      <button type="submit" class="btn btn-info btn-with-icon" id="submit"><i class="ion-android-create"></i>Créer</button>
                       <a href="#" class="switch">J'ai déjà un compte</a>
                     </div>
                 </form>
